%%{init: {'theme':'neutral'}}%%
classDiagram
    class TreatmentCatalogAggregate {
        <<aggregate>>
        -CatalogId catalogId
        -List~TreatmentPricingEntity~ treatments
        ___
        +addTreatment() void
        +updatePrice() void
        +getTreatmentPrice() MoneyValue
        +getTreatmentDuration() DurationValue
    }
    
    class TreatmentPricingEntity {
        <<entity>>
        -TreatmentId treatmentId
        -String name
        -String description
        -MoneyValue price
        -DurationValue estimatedDuration
        ___
        +updatePrice() void
        +updateDuration() void
        +getPrice() MoneyValue
    }
    
    class CatalogId {
        <<valueObject>>
        -String value
        ___
        +CatalogId(String)
        +getValue() String
        +equals(Object) boolean
        +hashCode() int
    }
    
    TreatmentCatalogAggregate *-- TreatmentPricingEntity : contains
    TreatmentCatalogAggregate *-- CatalogId : contains 